addons/prometheus/prom-webhook-dingtalk-deployment.yaml
---
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: prom-webhook-dingtalk
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: prom-webhook-dingtalk
    spec:
      # imagePullSecrets:
      #  - name: docker-secret
      nodeSelector:
        prometheus: "true"
      containers:
        - name: prom-webhook-dingtalk
          image: timonwong/prometheus-webhook-dingtalk:v0.3.0
          imagePullPolicy: IfNotPresent
          args:
            - --ding.profile=webhook01=https://oapi.dingtalk.com/robot/send?access_token=7835a53a2db85968aae593a8578ea523e70079185231fb4e4182d613a34ffac3
          ports:
            - name: web
              containerPort: 8060
          # readinessProbe:
          #  httpGet:
          #    path: /
          #    port: 8060
          #  initialDelaySeconds: 5
          #  timeoutSeconds: 5
          resources:
            requests:
              memory: 30Mi
              cpu: 100m
            limits:
              memory: 50Mi
              cpu: 200m
