addons/prometheus/prom-webhook-dingtalk-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prom-webhook-dingtalk
  namespace: kube-system
  labels:
    k8s-app: prom-webhook-dingtalk
  annotations:
    prometheus.io/probe.tcp: 'true'
spec:
  ports:
    - name: web
      port: 8060
      targetPort: web
      protocol: TCP
  selector:
    k8s-app: prom-webhook-dingtalk
