addons/prometheus/alertmanager-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: kube-system
spec:
  rules:
    - host: prom-alert.pri.ibanyu.com
      http:
        paths:
          - path: /
            backend:
              serviceName: alertmanager
              servicePort: 80
