addons/prometheus/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-system
spec:
  rules:
    - host: prom.pri.ibanyu.com 
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus 
              servicePort: 9090
